syntax = "proto3";

package hyperlane.ism.v1;

import "google/protobuf/any.proto";

option go_package = "github.com/strangelove-ventures/hyperlane-cosmos/x/ism/types";

// Hyperlane's default ISM
message DefaultIsm {
  uint32 origin = 1;
  google.protobuf.Any abstract_ism = 2;
}

// Hyperlane's custom ISM
message CustomIsm {
  uint32 index = 1;
  google.protobuf.Any abstract_ism = 2;
}
