syntax = "proto3";
package hyperlane.ism.v1;

import "google/api/annotations.proto";
import "hyperlane/ism/v1/ism.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/strangelove-ventures/hyperlane-cosmos/x/ism/types";

// Query service for hyperlane ISM module
service Query {
  // Get current default multisig ISM for an origin
  rpc OriginsDefaultIsm(QueryOriginsDefaultIsmRequest)
      returns (QueryOriginsDefaultIsmResponse) {
    option (google.api.http).get = "/hyperlane/ism/v1/origins_default_ism";
  }
  // Get all current default multisig ISMs
  rpc AllDefaultIsms(QueryAllDefaultIsmsRequest)
      returns (QueryAllDefaultIsmsResponse) {
    option (google.api.http).get = "/hyperlane/ism/v1/all_default_isms";
  }
  // Get custom ISM
  rpc CustomIsm(QueryCustomIsmRequest) returns (QueryCustomIsmResponse) {
    option (google.api.http).get = "/hyperlane/ism/v1/custom_ism";
  }
  // Get all custom ISMs
  rpc AllCustomIsms(QueryAllCustomIsmsRequest)
      returns (QueryAllCustomIsmsResponse) {
    option (google.api.http).get = "/hyperlane/ism/v1/all_custom_isms";
  }
}

// QueryDefaultIsmRequest is the request type for the DefaultIsm RPC method.
message QueryOriginsDefaultIsmRequest { uint32 origin = 1; }

// QueryDefaultIsmResponse is the response type for the DefaultIsm RPC method.
message QueryOriginsDefaultIsmResponse { google.protobuf.Any default_ism = 1; }

// QueryAllDefaultIsmRequest is the request type for the AllDefaultIsms RPC
// method.
message QueryAllDefaultIsmsRequest {}

// QueryAllDefaultIsmResponse is the response type for the AllDefaultIsms RPC
// method.
message QueryAllDefaultIsmsResponse { repeated DefaultIsm default_isms = 1; }

// QueryCustomIsmRequest is the request type for the CustomIsm RPC method.
message QueryCustomIsmRequest { uint32 ism_id = 1; }

// QueryCustomIsmResponse is the response type for the CustomIsm RPC method.
message QueryCustomIsmResponse { google.protobuf.Any custom_ism = 1; }

// QueryAllCustomIsmRequest is the request type for the AllCustomIsms RPC
// method.
message QueryAllCustomIsmsRequest {}

// QueryAllCustomIsmResponse is the response type for the AllCustomIsms RPC
// method.
message QueryAllCustomIsmsResponse { repeated CustomIsm custom_isms = 1; }